--- a/.github/workflows/places-api-demo.yml
+++ b/.github/workflows/places-api-demo.yml
@@ -25,8 +25,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Fill Firebase with Places Data
+    - name: Execute Data Collection via Smart Scheduler
       env:
+        NODE_ENV: production
         GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
         EXPO_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.EXPO_PUBLIC_FIREBASE_PROJECT_ID }}
         FIREBASE_PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
@@ -34,15 +35,15 @@ jobs:
         FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
         FIREBASE_CLIENT_ID: ${{ secrets.FIREBASE_CLIENT_ID }}
         FIREBASE_CLIENT_X509_CERT_URL: ${{ secrets.FIREBASE_CLIENT_X509_CERT_URL }}
-      run: node scripts/fillFirebase.js
-
-    - name: Fill Firebase with ALL Brussels Addresses
-      env:
-        GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
-        EXPO_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.EXPO_PUBLIC_FIREBASE_PROJECT_ID }}
-        FIREBASE_PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
-        FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-        FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-        FIREBASE_CLIENT_ID: ${{ secrets.FIREBASE_CLIENT_ID }}
-        FIREBASE_CLIENT_X509_CERT_URL: ${{ secrets.FIREBASE_CLIENT_X509_CERT_URL }}
-      run: node scripts/fetchAllBrusselsAddresses.js
+        ENABLE_GOOGLE: true
+        ENABLE_OSM: true
+        ENABLE_FALLBACK: true
+        ENABLE_VALIDATION: true
+        GOOGLE_DAILY_QUOTA: 2000
+        LOG_LEVEL: info
+        NOTIFY_ON_FAILURE: true
+      run: |
+        echo "🚀 Starting intelligent data collection..."
+        node scripts/scheduleManager.js execute dogPlaces
+        sleep 30
+        node scripts/scheduleManager.js execute addresses
