--- a/package.json
+++ b/package.json
@@ -4,22 +4,33 @@
   "description": "Script pour remplir Firebase avec des données de lieux pour chiens à Bruxelles",
   "main": "scripts/fillFirebase.js",
   "scripts": {
-    "fill-firebase": "node scripts/fillFirebase.js",
-    "fetch-addresses": "node scripts/fetchBrusselsAddresses.js",
-    "fetch-addresses-safe": "node scripts/fetchAddressesOptimized.js",
-    "fetch-all-addresses": "node scripts/fetchAllBrusselsAddresses.js",
-    "geocode-all-addresses": "node scripts/geocodeAllBrusselsAddresses.js",
-    "geocode-fast": "node scripts/geocodeAllBrusselsAddressesFast.js",
-    "test-firebase": "node scripts/testFirebase.js",
+    "start": "node scripts/dataManager.js",
+    "menu": "node scripts/dataManager.js",
+    "import:menu": "node scripts/dataManager.js",
+    "import:addresses": "node scripts/addresses/fetchOpenAddresses.js && node scripts/addresses/importAddresses.js && node scripts/addresses/validateAddresses.js",
+    "import:places": "node scripts/places/fetchGooglePlaces.js && node scripts/places/importPlaces.js && node scripts/places/validatePlaces.js",
+    "fetch:addresses": "node scripts/addresses/fetchOpenAddresses.js",
+    "fetch:places": "node scripts/places/fetchGooglePlaces.js",
+    "import:addresses:process": "node scripts/addresses/importAddresses.js",
+    "import:places:process": "node scripts/places/importPlaces.js",
+    "validate:addresses": "node scripts/addresses/validateAddresses.js",
+    "validate:places": "node scripts/places/validatePlaces.js",
+    "validate:all": "npm run validate:addresses && npm run validate:places",
+    "legacy:fill-firebase": "node scripts/legacy/fillFirebase.js",
+    "legacy:fetch-addresses": "node scripts/legacy/fetchBrusselsAddresses.js",
+    "legacy:fetch-addresses-safe": "node scripts/legacy/fetchAddressesOptimized.js",
+    "legacy:fetch-all-addresses": "node scripts/legacy/fetchAllBrusselsAddresses.js",
+    "legacy:geocode-all-addresses": "node scripts/legacy/geocodeAllBrusselsAddresses.js",
+    "legacy:geocode-fast": "node scripts/legacy/geocodeAllBrusselsAddressesFast.js",
+    "legacy:test-firebase": "node scripts/legacy/testFirebase.js",
+    "legacy:import-urbis": "tsx scripts/legacy/importAllBrusselsAddresses.ts",
+    "legacy:migrate-urbis": "tsx scripts/legacy/migrateToUrbis.ts",
+    "legacy:validate-urbis": "tsx scripts/legacy/validateAddresses.ts",
     "schedule:start": "node scripts/scheduleManager.js start",
     "schedule:execute": "node scripts/scheduleManager.js execute",
     "schedule:status": "node scripts/scheduleManager.js status",
     "schedule:legacy": "node scripts/scheduleManager.js legacy",
-    "import-addresses": "tsx scripts/importAllBrusselsAddresses.ts",
-    "import-addresses:dry": "tsx scripts/importAllBrusselsAddresses.ts --dry-run",
-    "validate-addresses": "tsx scripts/validateAddresses.ts",
-    "validate-addresses:cleanup": "tsx scripts/validateAddresses.ts --cleanup",
-    "addresses:help": "echo 'Scripts disponibles:\n  import-addresses - Import massif des adresses URBIS\n  import-addresses:dry - Test import sans sauvegarde\n  validate-addresses - Validation qualité des données\n  validate-addresses:cleanup - Validation + nettoyage automatique'"
+    "help": "echo 'DOG PLACES BRUSSELS - SCRIPTS DISPONIBLES:\n\n🎛️  MENU INTERACTIF:\n  npm start                  - Menu principal interactif\n  npm run menu               - Alias pour le menu principal\n\n🏠 ADDRESSES (GRATUIT):\n  npm run import:addresses   - Workflow complet addresses\n  npm run fetch:addresses    - Récupération uniquement\n  npm run validate:addresses - Validation uniquement\n\n🐕 PLACES (PAYANT Google API):\n  npm run import:places      - Workflow complet places\n  npm run fetch:places       - Récupération uniquement\n  npm run validate:places    - Validation uniquement\n\n🔍 VALIDATION:\n  npm run validate:all       - Validation complète\n\n📚 SCRIPTS LEGACY:\n  npm run legacy:*           - Anciens scripts (préfixe legacy:)\n\n💡 RECOMMANDATION: Utilisez \"npm start\" pour le menu interactif'"
   },
   "dependencies": {
     "axios": "^1.6.0",
